--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Swiper pagination bullets */
 .swiper-pagination-bullet {
-	background-color: #4ade80 !important; /* Tailwind's green-400 */
+	background-color: #4ade80 !important;
 }
 
-/* Active bullet */
 .swiper-pagination-bullet-active {
-	background-color: #16a34a !important; /* Tailwind's green-600 */
+	background-color: #16a34a !important;
 }
 
-/* Swiper navigation buttons */
 .swiper-button-next,
 .swiper-button-prev {
-	color: #4ade80 !important; /* Tailwind's green-400 */
+	color: #4ade80 !important;
 }
 
-/* Add this in your global CSS file or in the same CSS file */
 @media (max-width: 1080px) {
 	.swiper-button-prev,
 	.swiper-button-next {
-		display: none; /* Hide the navigation buttons */
+		display: none;
 	}
 }
